--- a/README.rdoc
+++ b/README.rdoc
@@ -9,23 +9,27 @@ Test if the count for a model has changed, and by how much.  Requires the contex
 
 Provides the following matcher methods:
 
-- create_record(klass_or_symbol) # alias for change_record_count.for(klass_or_symbol).by(1)
+- create_record(klass_or_symbol)
+  alias for change_record_count.for(klass_or_symbol).by(1)
 
-- create_records(klass_or_symbol, amount) # alias for  change_record_count.for(klass_or_symbol).by(amount)
+- create_records(klass_or_symbol, amount)
+  alias for change_record_count.for(klass_or_symbol).by(amount)
 
-- destroy_record(klass_or_symbol) # alias for change_record_count.for(klass_or_symbol).by(-1)
+- destroy_record(klass_or_symbol)
+  alias for change_record_count.for(klass_or_symbol).by(-1)
 
-- destroy_records(klass_or_symbol, amount) # alias for change_record_count.for(klass_or_symbol).by(-amount)
+- destroy_records(klass_or_symbol, amount) 
+  alias for change_record_count.for(klass_or_symbol).by(-amount)
 
 - change_record_count
   Tests the difference in record count before and after the current setup/subject block
   Can be used with the follow methods:
   - for(klass_or_symbol)
-      Provides the class which the test is being performed on.  Can be a constant or a symbol
+    Provides the class which the test is being performed on.  Can be a constant or a symbol
 
   - by(amount)
-      Provides an expected difference for the number of records for the specified class.
-      Excluding this number will allow the matcher to check for any difference
+    Provides an expected difference for the number of records for the specified class.
+    Excluding this number will allow the matcher to check for any difference
 
 Examples:
 
